main.tf
# Providers

provider "aws" {
 access_key = var.aws_access_key
 secret_key = var.aws_secret_key
 region = var.region
}

# VPC details

resource "aws_vpc" "vpc1" {
 cidr_block = var.vpc_cidr
 enable_dns_hostnames = "true"
}

# Subnet details

resource "aws_subnet" "subnet1" {
 cidr_block = var.subnet1_cidr
 vpc_id = aws_vpc.vpc1.id
 map_public_ip_on_launch = "true"
 availability_zone = data.aws_availability_zones.available.names[1]
}

# Internet_gate_way

resource "aws_internet_gateway" "gateway1" {
 vpc_id = aws_vpc.vpc1.id
}

# Route table

resource "aws_route_table" "route_table1" {
 vpc_id = aws_vpc.vpc1.id
 
 route {
  cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.gateway1.id
 }
}

# Route table associations

resource "aws_route_table_association" "route_subnet1" {
 subnet_id = aws_subnet.subnet1.id
 route_table_id = aws_route_table.route_table1.id
}

#Security Gropus

resource "aws_security_group" "sg-nodejs-instance" {
 name = "nodejs_sg"
 vpc_id = aws_vpc.vpc1.id
 
 ingress {
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
 }
 
 ingress {
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
 }
 
 ingress {
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
 }
 
 egress {
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
 }
 
}

# Instances

resource "aws_instance" "nodejs1" {
 ami = data.aws_ami.aws_linux.id
 instance_type = "t2.micro"
 subnet_id = aws_subnet.subnet1.id
 vpc_security_group_ids = [aws_security_group.sg-nodejs-instance.id]
 key_name = var.ssh_key_name
 
 connection {
  type = "ssh"
  host = self.public_ip
  user = "ec2-user"
  private_key = file(var.private_key_path)
 }
 
}

#Data 

data "aws_availability_zones" "available" {
 state = "available"
}

data "aws_ami" "aws_linux" {
 most_recent = true
 owners = ["amazon"]
 
 filter {
  name = "name"
  values = ["amzn-ami-hvm*"]
 }
 
 filter {
  name = "virtualization-type"
  values = ["hvm"]
 }
 
}
